2010-03-10  Robert Hogan  <robert@webkit.org>

Reviewed by Holger Freyther.

        QtLauncher: Fix typo in conditional statement in
                    WebViewGraphicsBased::setFrameRateMeasurementEnabled.

        '=' should be '=='!

        https://bugs.webkit.org/show_bug.cgi?id=35877

        * QtLauncher/webview.cpp:
        (WebViewGraphicsBased::setFrameRateMeasurementEnabled):

Canonical link: https://commits.webkit.org/47086@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55791 268f45cc-cd09-0410-ab3c-d52691b4dbfc