WebKitTools/QtLauncher/webview.cpp
@@ -87,7 +87,7 @@ void WebViewGraphicsBased::resizeEvent(QResizeEvent* event)
 
 void WebViewGraphicsBased::setFrameRateMeasurementEnabled(bool enabled)
 {
-    if (m_measureFps = enabled) {
+    if (m_measureFps == enabled) {
         m_lastConsultTime = m_startTime = QTime::currentTime();
         m_updateTimer->start();
     } else 
